--- a/css/home.css
+++ b/css/home.css
@@ -8,3 +8,11 @@ h1, h2, h3, h4, h5, h6{
 
 	font-family: 'Julius Sans One', sans-serif;
 }
+
+h1 {
+	font-size: 80px;
+}
+
+h2{
+	font-size: 50px;
+}
