--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,8 @@
 body{
 	height: 100%;
 	width: 100%;
+	overflow-x: hidden;
+  	overflow-y: hidden;
 
 }
 
@@ -16,4 +18,11 @@ h1 {
 
 h2{
 	font-size: 50px;
+}
+
+.container{
+  padding: 0%;
+  margin: 0%;
+  height: 100%;
+  width: 100%;
 }
